crates/fixtures/tests/snapshots/hostile__content_bidi_override_ligature.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Before ‮",
            "glyphs": [
              {
                "id": 3,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 7085,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 33,
                "x": 12717,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 16535,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 45,
                "x": 22719,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 27371,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 33116,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 1,
                "x": 35741,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 10
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office 123‬",
            "glyphs": [
              {
                "id": 1,
                "x": 35741,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 13
                }
              },
              {
                "id": 424,
                "x": 35741,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 423,
                "x": 41373,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 422,
                "x": 47005,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 52637,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 55262,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 30,
                "x": 61007,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 36,
                "x": 66504,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 417,
                "x": 69861,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 77104,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": ", then normal English after ",
            "glyphs": [
              {
                "id": 474,
                "x": 83288,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 86667,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 47,
                "x": 89292,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 35,
                "x": 92953,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 32,
                "x": 99723,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 41,
                "x": 105468,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 112294,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 41,
                "x": 114919,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 42,
                "x": 121745,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 45,
                "x": 127929,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 40,
                "x": 132694,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 28,
                "x": 142843,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 39,
                "x": 148576,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 1,
                "x": 151933,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 6,
                "x": 154558,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 41,
                "x": 161350,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 34,
                "x": 168176,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 39,
                "x": 173898,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 36,
                "x": 177255,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 46,
                "x": 180612,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 35,
                "x": 185388,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 1,
                "x": 192158,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 28,
                "x": 194783,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 416,
                "x": 200516,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 25
                }
              },
              {
                "id": 32,
                "x": 207770,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 45,
                "x": 213515,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 1,
                "x": 218280,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "it.",
            "glyphs": [
              {
                "id": 36,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 47,
                "x": 3357,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 473,
                "x": 7018,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 280576,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "A note.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 8241,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 5609,
                "y": 8241,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 41,
                "x": 7577,
                "y": 8241,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 12696,
                "y": 8241,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 17249,
                "y": 8241,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 19995,
                "y": 8241,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 473,
                "x": 24058,
                "y": 8241,
                "text": {
                  "start": 6,
                  "end": 7
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
